--- a/ssh-monitoring.service
+++ b/ssh-monitoring.service
@@ -3,10 +3,10 @@ Description=SSH monitoring service
 
 [Service]
 Type=simple
-ExecStart=/usr/lib/ssh-monitoring/service.sh
+ExecStart=/usr/lib/ssh-monitoring/ssh-monitoring.sh
 Restart=always
-User=root
-Group=root
+User=ssh-monitoring
+Group=ssh-monitoring
 
 [Install]
 WantedBy=multi-user.target
