--- a/ssh-monitoring.service
+++ b/ssh-monitoring.service
@@ -4,6 +4,7 @@ Description=SSH monitoring service
 [Service]
 Type=simple
 ExecStart=/usr/lib/ssh-monitoring/ssh-monitoring.sh
+WorkingDirectory=/usr/bin/ssh-monitoring
 Restart=always
 User=ssh-monitoring
 Group=ssh-monitoring
